--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,5 @@
-
+{% extends "import.html" %} 
+{% block content %}
 
 <center>
 <br><h2>Brain Tumor Classification Using Deep Learning</h2><br>
@@ -25,3 +26,4 @@
 
 
 </center><br><br>
+{% endblock %}
