--- a/templates/index.html
+++ b/templates/index.html
@@ -2,28 +2,29 @@
 {% block content %}
 
 <center>
-<br><h2>Brain Tumor Classification Using Deep Learning</h2><br>
+    <br><h2>Brain Tumor Classification Using Deep Learning</h2><br>
 
+    <!-- Upload Form -->
     <form id="upload-file" method="post" enctype="multipart/form-data">
-         <input type="file" name="file" class="btn btn-success" id="imageUpload" accept=".png, .jpg, .jpeg">
+        <input type="file" name="file" class="btn btn-success" id="imageUpload" accept=".png, .jpg, .jpeg">
     </form>
 
-
+    <!-- Image Preview Section -->
     <div class="image-section" style="display:none;">
-         <img id="imagePreview"  class="img-responsive" src="#" style="width:300px;height:300px;"/><br><br>
-         <div>
-            <button type="button" class="btn btn-info btn-lg " id="btn-predict">Predict!</button>
-         </div>
+        <img id="imagePreview" class="preview-img" src="#" alt="Uploaded Image"/><br><br>
+        <div>
+            <button type="button" class="btn btn-info btn-lg" id="btn-predict">Predict!</button>
+        </div>
     </div>
 
+    <!-- Loader -->
+    <div class="loader"></div>
 
-
-    <div class="loader" style="display:none;"></div>
-
+    <!-- Result Section -->
     <h3 id="result">
-        <span> </span>
+        <span></span>
     </h3>
+</center>
 
-
-</center><br><br>
+<br><br>
 {% endblock %}
