--- a/templates/import.html
+++ b/templates/import.html
@@ -1,5 +1,5 @@
 <html lang="en">
-
+<center>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,18 +13,23 @@
 </head>
 
 <body>
+    
     <nav class="navbar navbar-dark bg-dark">
+        
         <div class="container">
-            <a class="navbar-brand" href="#">Brain Tumor Classification Using Deep Learning</a>
+            <a class="navbar-brand mx-auto" href="#">Brain Tumor Classification Using Deep Learning</a>
+
         </div>
+        
     </nav>
+
 
     {% block content %}
     {% endblock %}
 
 </body>
 
-
+</center>
 </html>
 
 
