--- a/static/css/test.css
+++ b/static/css/test.css
@@ -13,6 +13,7 @@ h2 {
     margin-bottom: 20px;
     color: #430a52;
     font-weight: 600;
+    text-align: center;
 }
 
 /*File Upload Button*/
@@ -110,4 +111,13 @@ input[type="file"] {
     bottom: 0;
     width: 100%;
     font-size: 14px;
+    text-align: center;
+}
+.navbar-brand {
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+}
+.navbar.navbar-dark.bg-dark {
+    text-align: center;
 }
